lib/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(value) { return flat(value) },
        peg$c1 = "*",
        peg$c2 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c3 = function(value) {
            return {type: 'AliphaticOrganic', value: value}
          },
        peg$c4 = "Br",
        peg$c5 = { type: "literal", value: "Br", description: "\"Br\"" },
        peg$c6 = "B",
        peg$c7 = { type: "literal", value: "B", description: "\"B\"" },
        peg$c8 = "Cl",
        peg$c9 = { type: "literal", value: "Cl", description: "\"Cl\"" },
        peg$c10 = "C",
        peg$c11 = { type: "literal", value: "C", description: "\"C\"" },
        peg$c12 = "N",
        peg$c13 = { type: "literal", value: "N", description: "\"N\"" },
        peg$c14 = "O",
        peg$c15 = { type: "literal", value: "O", description: "\"O\"" },
        peg$c16 = "S",
        peg$c17 = { type: "literal", value: "S", description: "\"S\"" },
        peg$c18 = "P",
        peg$c19 = { type: "literal", value: "P", description: "\"P\"" },
        peg$c20 = "F",
        peg$c21 = { type: "literal", value: "F", description: "\"F\"" },
        peg$c22 = "I",
        peg$c23 = { type: "literal", value: "I", description: "\"I\"" },
        peg$c24 = function(value) {
            return {type: 'AromaticOrganic', value: value}
          },
        peg$c25 = "b",
        peg$c26 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c27 = "c",
        peg$c28 = { type: "literal", value: "c", description: "\"c\"" },
        peg$c29 = "n",
        peg$c30 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c31 = "o",
        peg$c32 = { type: "literal", value: "o", description: "\"o\"" },
        peg$c33 = "s",
        peg$c34 = { type: "literal", value: "s", description: "\"s\"" },
        peg$c35 = "p",
        peg$c36 = { type: "literal", value: "p", description: "\"p\"" },
        peg$c37 = "[",
        peg$c38 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c39 = function() {
            return {type: 'BracketAtom', value: 'begin'}
          },
        peg$c40 = "]",
        peg$c41 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c42 = function() {
            return {type: 'BracketAtom', value: 'end'}
          },
        peg$c43 = function(value) {
            return value ? {type: 'Isotope', value: value} : null
          },
        peg$c44 = function(value) {
            return {type: 'ElementSymbol', value: value}
          },
        peg$c45 = "Ac",
        peg$c46 = { type: "literal", value: "Ac", description: "\"Ac\"" },
        peg$c47 = "Ag",
        peg$c48 = { type: "literal", value: "Ag", description: "\"Ag\"" },
        peg$c49 = "Al",
        peg$c50 = { type: "literal", value: "Al", description: "\"Al\"" },
        peg$c51 = "Am",
        peg$c52 = { type: "literal", value: "Am", description: "\"Am\"" },
        peg$c53 = "Ar",
        peg$c54 = { type: "literal", value: "Ar", description: "\"Ar\"" },
        peg$c55 = "As",
        peg$c56 = { type: "literal", value: "As", description: "\"As\"" },
        peg$c57 = "At",
        peg$c58 = { type: "literal", value: "At", description: "\"At\"" },
        peg$c59 = "Au",
        peg$c60 = { type: "literal", value: "Au", description: "\"Au\"" },
        peg$c61 = "Ba",
        peg$c62 = { type: "literal", value: "Ba", description: "\"Ba\"" },
        peg$c63 = "Be",
        peg$c64 = { type: "literal", value: "Be", description: "\"Be\"" },
        peg$c65 = "Bh",
        peg$c66 = { type: "literal", value: "Bh", description: "\"Bh\"" },
        peg$c67 = "Bi",
        peg$c68 = { type: "literal", value: "Bi", description: "\"Bi\"" },
        peg$c69 = "Bk",
        peg$c70 = { type: "literal", value: "Bk", description: "\"Bk\"" },
        peg$c71 = "Ca",
        peg$c72 = { type: "literal", value: "Ca", description: "\"Ca\"" },
        peg$c73 = "Cd",
        peg$c74 = { type: "literal", value: "Cd", description: "\"Cd\"" },
        peg$c75 = "Ce",
        peg$c76 = { type: "literal", value: "Ce", description: "\"Ce\"" },
        peg$c77 = "Cf",
        peg$c78 = { type: "literal", value: "Cf", description: "\"Cf\"" },
        peg$c79 = "Cm",
        peg$c80 = { type: "literal", value: "Cm", description: "\"Cm\"" },
        peg$c81 = "Cn",
        peg$c82 = { type: "literal", value: "Cn", description: "\"Cn\"" },
        peg$c83 = "Co",
        peg$c84 = { type: "literal", value: "Co", description: "\"Co\"" },
        peg$c85 = "Cr",
        peg$c86 = { type: "literal", value: "Cr", description: "\"Cr\"" },
        peg$c87 = "Cs",
        peg$c88 = { type: "literal", value: "Cs", description: "\"Cs\"" },
        peg$c89 = "Cu",
        peg$c90 = { type: "literal", value: "Cu", description: "\"Cu\"" },
        peg$c91 = "Db",
        peg$c92 = { type: "literal", value: "Db", description: "\"Db\"" },
        peg$c93 = "Ds",
        peg$c94 = { type: "literal", value: "Ds", description: "\"Ds\"" },
        peg$c95 = "Dy",
        peg$c96 = { type: "literal", value: "Dy", description: "\"Dy\"" },
        peg$c97 = "Er",
        peg$c98 = { type: "literal", value: "Er", description: "\"Er\"" },
        peg$c99 = "Es",
        peg$c100 = { type: "literal", value: "Es", description: "\"Es\"" },
        peg$c101 = "Eu",
        peg$c102 = { type: "literal", value: "Eu", description: "\"Eu\"" },
        peg$c103 = "Fe",
        peg$c104 = { type: "literal", value: "Fe", description: "\"Fe\"" },
        peg$c105 = "Fl",
        peg$c106 = { type: "literal", value: "Fl", description: "\"Fl\"" },
        peg$c107 = "Fm",
        peg$c108 = { type: "literal", value: "Fm", description: "\"Fm\"" },
        peg$c109 = "Fr",
        peg$c110 = { type: "literal", value: "Fr", description: "\"Fr\"" },
        peg$c111 = "Ga",
        peg$c112 = { type: "literal", value: "Ga", description: "\"Ga\"" },
        peg$c113 = "Gd",
        peg$c114 = { type: "literal", value: "Gd", description: "\"Gd\"" },
        peg$c115 = "Ge",
        peg$c116 = { type: "literal", value: "Ge", description: "\"Ge\"" },
        peg$c117 = "He",
        peg$c118 = { type: "literal", value: "He", description: "\"He\"" },
        peg$c119 = "Hf",
        peg$c120 = { type: "literal", value: "Hf", description: "\"Hf\"" },
        peg$c121 = "Hg",
        peg$c122 = { type: "literal", value: "Hg", description: "\"Hg\"" },
        peg$c123 = "Ho",
        peg$c124 = { type: "literal", value: "Ho", description: "\"Ho\"" },
        peg$c125 = "Hs",
        peg$c126 = { type: "literal", value: "Hs", description: "\"Hs\"" },
        peg$c127 = "H",
        peg$c128 = { type: "literal", value: "H", description: "\"H\"" },
        peg$c129 = "In",
        peg$c130 = { type: "literal", value: "In", description: "\"In\"" },
        peg$c131 = "Ir",
        peg$c132 = { type: "literal", value: "Ir", description: "\"Ir\"" },
        peg$c133 = "Kr",
        peg$c134 = { type: "literal", value: "Kr", description: "\"Kr\"" },
        peg$c135 = "K",
        peg$c136 = { type: "literal", value: "K", description: "\"K\"" },
        peg$c137 = "La",
        peg$c138 = { type: "literal", value: "La", description: "\"La\"" },
        peg$c139 = "Li",
        peg$c140 = { type: "literal", value: "Li", description: "\"Li\"" },
        peg$c141 = "Lr",
        peg$c142 = { type: "literal", value: "Lr", description: "\"Lr\"" },
        peg$c143 = "Lu",
        peg$c144 = { type: "literal", value: "Lu", description: "\"Lu\"" },
        peg$c145 = "Lv",
        peg$c146 = { type: "literal", value: "Lv", description: "\"Lv\"" },
        peg$c147 = "Md",
        peg$c148 = { type: "literal", value: "Md", description: "\"Md\"" },
        peg$c149 = "Mg",
        peg$c150 = { type: "literal", value: "Mg", description: "\"Mg\"" },
        peg$c151 = "Mn",
        peg$c152 = { type: "literal", value: "Mn", description: "\"Mn\"" },
        peg$c153 = "Mo",
        peg$c154 = { type: "literal", value: "Mo", description: "\"Mo\"" },
        peg$c155 = "Mt",
        peg$c156 = { type: "literal", value: "Mt", description: "\"Mt\"" },
        peg$c157 = "Na",
        peg$c158 = { type: "literal", value: "Na", description: "\"Na\"" },
        peg$c159 = "Nb",
        peg$c160 = { type: "literal", value: "Nb", description: "\"Nb\"" },
        peg$c161 = "Nd",
        peg$c162 = { type: "literal", value: "Nd", description: "\"Nd\"" },
        peg$c163 = "Ne",
        peg$c164 = { type: "literal", value: "Ne", description: "\"Ne\"" },
        peg$c165 = "Ni",
        peg$c166 = { type: "literal", value: "Ni", description: "\"Ni\"" },
        peg$c167 = "No",
        peg$c168 = { type: "literal", value: "No", description: "\"No\"" },
        peg$c169 = "Np",
        peg$c170 = { type: "literal", value: "Np", description: "\"Np\"" },
        peg$c171 = "Os",
        peg$c172 = { type: "literal", value: "Os", description: "\"Os\"" },
        peg$c173 = "Pa",
        peg$c174 = { type: "literal", value: "Pa", description: "\"Pa\"" },
        peg$c175 = "Pb",
        peg$c176 = { type: "literal", value: "Pb", description: "\"Pb\"" },
        peg$c177 = "Pd",
        peg$c178 = { type: "literal", value: "Pd", description: "\"Pd\"" },
        peg$c179 = "Pm",
        peg$c180 = { type: "literal", value: "Pm", description: "\"Pm\"" },
        peg$c181 = "Po",
        peg$c182 = { type: "literal", value: "Po", description: "\"Po\"" },
        peg$c183 = "Pr",
        peg$c184 = { type: "literal", value: "Pr", description: "\"Pr\"" },
        peg$c185 = "Pt",
        peg$c186 = { type: "literal", value: "Pt", description: "\"Pt\"" },
        peg$c187 = "Pu",
        peg$c188 = { type: "literal", value: "Pu", description: "\"Pu\"" },
        peg$c189 = "Ra",
        peg$c190 = { type: "literal", value: "Ra", description: "\"Ra\"" },
        peg$c191 = "Rb",
        peg$c192 = { type: "literal", value: "Rb", description: "\"Rb\"" },
        peg$c193 = "Re",
        peg$c194 = { type: "literal", value: "Re", description: "\"Re\"" },
        peg$c195 = "Rf",
        peg$c196 = { type: "literal", value: "Rf", description: "\"Rf\"" },
        peg$c197 = "Rg",
        peg$c198 = { type: "literal", value: "Rg", description: "\"Rg\"" },
        peg$c199 = "Rh",
        peg$c200 = { type: "literal", value: "Rh", description: "\"Rh\"" },
        peg$c201 = "Rn",
        peg$c202 = { type: "literal", value: "Rn", description: "\"Rn\"" },
        peg$c203 = "Ru",
        peg$c204 = { type: "literal", value: "Ru", description: "\"Ru\"" },
        peg$c205 = "Sb",
        peg$c206 = { type: "literal", value: "Sb", description: "\"Sb\"" },
        peg$c207 = "Sc",
        peg$c208 = { type: "literal", value: "Sc", description: "\"Sc\"" },
        peg$c209 = "Se",
        peg$c210 = { type: "literal", value: "Se", description: "\"Se\"" },
        peg$c211 = "Sg",
        peg$c212 = { type: "literal", value: "Sg", description: "\"Sg\"" },
        peg$c213 = "Si",
        peg$c214 = { type: "literal", value: "Si", description: "\"Si\"" },
        peg$c215 = "Sm",
        peg$c216 = { type: "literal", value: "Sm", description: "\"Sm\"" },
        peg$c217 = "Sn",
        peg$c218 = { type: "literal", value: "Sn", description: "\"Sn\"" },
        peg$c219 = "Sr",
        peg$c220 = { type: "literal", value: "Sr", description: "\"Sr\"" },
        peg$c221 = "Ta",
        peg$c222 = { type: "literal", value: "Ta", description: "\"Ta\"" },
        peg$c223 = "Tb",
        peg$c224 = { type: "literal", value: "Tb", description: "\"Tb\"" },
        peg$c225 = "Tc",
        peg$c226 = { type: "literal", value: "Tc", description: "\"Tc\"" },
        peg$c227 = "Te",
        peg$c228 = { type: "literal", value: "Te", description: "\"Te\"" },
        peg$c229 = "Th",
        peg$c230 = { type: "literal", value: "Th", description: "\"Th\"" },
        peg$c231 = "Ti",
        peg$c232 = { type: "literal", value: "Ti", description: "\"Ti\"" },
        peg$c233 = "Tl",
        peg$c234 = { type: "literal", value: "Tl", description: "\"Tl\"" },
        peg$c235 = "Tm",
        peg$c236 = { type: "literal", value: "Tm", description: "\"Tm\"" },
        peg$c237 = "U",
        peg$c238 = { type: "literal", value: "U", description: "\"U\"" },
        peg$c239 = "V",
        peg$c240 = { type: "literal", value: "V", description: "\"V\"" },
        peg$c241 = "W",
        peg$c242 = { type: "literal", value: "W", description: "\"W\"" },
        peg$c243 = "Xe",
        peg$c244 = { type: "literal", value: "Xe", description: "\"Xe\"" },
        peg$c245 = "Yb",
        peg$c246 = { type: "literal", value: "Yb", description: "\"Yb\"" },
        peg$c247 = "Y",
        peg$c248 = { type: "literal", value: "Y", description: "\"Y\"" },
        peg$c249 = "Zn",
        peg$c250 = { type: "literal", value: "Zn", description: "\"Zn\"" },
        peg$c251 = "Zr",
        peg$c252 = { type: "literal", value: "Zr", description: "\"Zr\"" },
        peg$c253 = function(value) {
            return {type: 'AromaticSymbol', value: value}
          },
        peg$c254 = "as",
        peg$c255 = { type: "literal", value: "as", description: "\"as\"" },
        peg$c256 = "se",
        peg$c257 = { type: "literal", value: "se", description: "\"se\"" },
        peg$c258 = function(value) {
            return {type: 'Chiral', value: chiralMap[value]}
          },
        peg$c259 = "@@",
        peg$c260 = { type: "literal", value: "@@", description: "\"@@\"" },
        peg$c261 = "@",
        peg$c262 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c263 = function(value) {
            return {type: 'HydrogenCount', value: value !== null ? value : 1}
          },
        peg$c264 = "-",
        peg$c265 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c266 = function(value) {
            return {type: 'Charge', value: value ? value * -1 : -1}
          },
        peg$c267 = "+",
        peg$c268 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c269 = function(value) {
            return {type: 'Charge', value: value ? value: 1}
          },
        peg$c270 = ":",
        peg$c271 = { type: "literal", value: ":", description: "\":\"" },
        peg$c272 = function(value) {
            return {type: 'Class', value: value}
          },
        peg$c273 = function(value) {
            return {type: 'Bond', value: value}
          },
        peg$c274 = "=",
        peg$c275 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c276 = "#",
        peg$c277 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c278 = "$",
        peg$c279 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c280 = "/",
        peg$c281 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c282 = "\\",
        peg$c283 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c284 = function(bond, value) {
            return [bond, {type: 'Ringbond', value: value}]
          },
        peg$c285 = "%",
        peg$c286 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c287 = "(",
        peg$c288 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c289 = function() {
            return {type: 'Branch', value: 'begin'}
          },
        peg$c290 = ")",
        peg$c291 = { type: "literal", value: ")", description: "\")\"" },
        peg$c292 = function() {
            return {type: 'Branch', value: 'end'}
          },
        peg$c293 = ".",
        peg$c294 = { type: "literal", value: ".", description: "\".\"" },
        peg$c295 = function() {
            return {type: 'Bond', value: '.'}
          },
        peg$c296 = function(Chain) {
            return flat(Chain)
          },
        peg$c297 = /^[0-9]/,
        peg$c298 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c299 = function() {
            return parseInt(text())
          },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseSmiles();

      return s0;
    }

    function peg$parseAtom() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseBracketAtom();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$parseAliphaticOrganic();
        if (s0 === peg$FAILED) {
          s0 = peg$parseAromaticOrganic();
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 42) {
              s0 = peg$c1;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c2); }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseAliphaticOrganic() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseAliphaticOrganicValue();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseAliphaticOrganicValue() {
      var s0;

      if (input.substr(peg$currPos, 2) === peg$c4) {
        s0 = peg$c4;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 66) {
          s0 = peg$c6;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c8) {
            s0 = peg$c8;
            peg$currPos += 2;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 67) {
              s0 = peg$c10;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 78) {
                s0 = peg$c12;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c13); }
              }
              if (s0 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 79) {
                  s0 = peg$c14;
                  peg$currPos++;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c15); }
                }
                if (s0 === peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 83) {
                    s0 = peg$c16;
                    peg$currPos++;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c17); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 80) {
                      s0 = peg$c18;
                      peg$currPos++;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c19); }
                    }
                    if (s0 === peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 70) {
                        s0 = peg$c20;
                        peg$currPos++;
                      } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c21); }
                      }
                      if (s0 === peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 73) {
                          s0 = peg$c22;
                          peg$currPos++;
                        } else {
                          s0 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c23); }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseAromaticOrganic() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseAromaticOrganicValue();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c24(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseAromaticOrganicValue() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 98) {
        s0 = peg$c25;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c26); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 99) {
          s0 = peg$c27;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c28); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 110) {
            s0 = peg$c29;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c30); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 111) {
              s0 = peg$c31;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c32); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 115) {
                s0 = peg$c33;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c34); }
              }
              if (s0 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 112) {
                  s0 = peg$c35;
                  peg$currPos++;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c36); }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseBracketAtom() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;
